--- a/src/bs/04-main Staking.ipynb
+++ b/src/bs/04-main Staking.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bsf import BSF, Keys\n",
+    "from bs import BS, Keys\n",
     "from selenium import webdriver\n",
     "import time, requests, json"
    ]
@@ -35,7 +35,7 @@
     }
    ],
    "source": [
-    "b_driver = BSF(\n",
+    "b_driver = BS(\n",
     "    webdriver.Firefox(executable_path=\"/home/tttienthinh/Documents/Programmation/Bash/StartupApp/driver/geckodriver\"),\n",
     ")\n",
     "print(\"Make sure you have at least : \")\n",
