--- a/src/bs/04-main Staking.ipynb
+++ b/src/bs/04-main Staking.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Importation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -8,7 +15,7 @@
    "source": [
     "from bs import BS, Keys\n",
     "from selenium import webdriver\n",
-    "import time, requests, json"
+    "import time, requests, json, pickle"
    ]
   },
   {
@@ -42,6 +49,35 @@
     "print(\" 1 USDT in P2P transfert Binance to pay fees\")\n",
     "input(\"Enter when login is done : \")\n",
     "b_driver.stake_page()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump({\"fees\": 0}, open(\"data.pkl\", \"wb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'fees': 0}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pickle.load(open(\"data.pkl\", \"rb\"))"
    ]
   },
   {
@@ -121,15 +157,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def binance():\n",
     "    response = json.loads(requests.get(\n",
     "        \"https://www.binance.com/gateway-api/v1/friendly/pos/union?\\\n",
-    "        pageSize=50&pageIndex=1&status=ALL).text)['data']\"\n",
-    "    )\n",
+    "        pageSize=50&pageIndex=1&status=ALL\").text)['data']\n",
     "    result = []\n",
     "    for item in response:\n",
     "        for asset in item[\"projects\"]:\n",
@@ -140,6 +175,53 @@
     "                    \"APY\": str(round(float(asset[\"config\"][\"annualInterestRate\"]) * 100, 2))\n",
     "                })\n",
     "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'asset': 'SHIB', 'duration': '30', 'APY': '3.67'},\n",
+       " {'asset': 'SHIB', 'duration': '60', 'APY': '4.12'},\n",
+       " {'asset': 'SHIB', 'duration': '90', 'APY': '5.25'},\n",
+       " {'asset': 'INJ', 'duration': '30', 'APY': '3.67'},\n",
+       " {'asset': 'INJ', 'duration': '60', 'APY': '4.12'},\n",
+       " {'asset': 'INJ', 'duration': '90', 'APY': '5.62'},\n",
+       " {'asset': 'GRT', 'duration': '30', 'APY': '13.56'},\n",
+       " {'asset': 'GRT', 'duration': '60', 'APY': '15.26'},\n",
+       " {'asset': 'KLAY', 'duration': '30', 'APY': '6.54'},\n",
+       " {'asset': 'SAND', 'duration': '30', 'APY': '12.36'},\n",
+       " {'asset': 'SAND', 'duration': '60', 'APY': '19.59'},\n",
+       " {'asset': 'SAND', 'duration': '90', 'APY': '25.15'},\n",
+       " {'asset': 'KSM', 'duration': '30', 'APY': '14.79'},\n",
+       " {'asset': 'NEO', 'duration': '15', 'APY': '0.0'},\n",
+       " {'asset': 'NEO', 'duration': '30', 'APY': '0.0'},\n",
+       " {'asset': 'ATOM', 'duration': '30', 'APY': '9.47'},\n",
+       " {'asset': 'SOL', 'duration': '30', 'APY': '9.2'},\n",
+       " {'asset': 'NEAR', 'duration': '30', 'APY': '10.79'},\n",
+       " {'asset': 'DODO', 'duration': '30', 'APY': '21.32'},\n",
+       " {'asset': 'VET', 'duration': '15', 'APY': '0.0'},\n",
+       " {'asset': 'BIFI', 'duration': '30', 'APY': '18.36'},\n",
+       " {'asset': 'BIFI', 'duration': '60', 'APY': '22.69'},\n",
+       " {'asset': 'MDX', 'duration': '30', 'APY': '25.43'},\n",
+       " {'asset': '1INCH', 'duration': '15', 'APY': '4.34'},\n",
+       " {'asset': '1INCH', 'duration': '30', 'APY': '5.6'},\n",
+       " {'asset': '1INCH', 'duration': '60', 'APY': '6.7'},\n",
+       " {'asset': 'TKO', 'duration': '30', 'APY': '8.23'},\n",
+       " {'asset': 'TKO', 'duration': '60', 'APY': '10.23'}]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binance()"
    ]
   },
   {
@@ -178,7 +260,7 @@
     "            if {'TOKEN': asset, 'DAYS': duration} in tokens:\n",
     "                amount, fees = b_driver.stake()\n",
     "                print(f\"Staked Successfully !\")\n",
-    "                done = b_driver.donation(fees + past fees)\n",
+    "                done = b_driver.donation(fees + past_fees)\n",
     "                if done:\n",
     "                    with open(\"data.txt\", \"w\") as f:\n",
     "                        f.write(\"0\")\n",
@@ -235,13 +317,6 @@
    "source": [
     "65 == \"65\""
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
